--- a/sections/_footer.scss
+++ b/sections/_footer.scss
@@ -12,6 +12,7 @@ footer {
     gap: 10px;
     padding: 10px 12% 10px 5%;
     justify-content:space-between;
+    align-items: center;
     i {
         transform: rotateY(180deg);
     }
