--- a/sections/_header.scss
+++ b/sections/_header.scss
@@ -36,3 +36,20 @@ header {
         }
     }
 }
+
+
+h2 {
+    color: white;
+    font-size: small;
+}
+
+p{
+    font-size: x-small;
+}
+
+button{
+    color: white;
+    background-color: colors.$leaf-green;
+    border: 2px solid white;
+    padding: 5px 10px 5px 10px;
+}
